Decreased heght by 1 pixel to prevent y overflow. Added button to email developers

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -19,7 +19,7 @@ body {
 
 .options-wrapper {
   max-width: 500px;
-  padding: 10px;
+  padding: 10px 0px;
   margin: auto;
 }
 
